--- a/CargoShop/package.json
+++ b/CargoShop/package.json
@@ -17,7 +17,8 @@
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0",
-    "yup-locale-pt": "^0.0.9"
+    "yup-locale-pt": "^0.0.9",
+    "json-server": "^0.16.3"
   },
   "scripts": {
     "start": "react-scripts start",
