--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "json-server": "^1.0.0-beta.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
@@ -17,8 +18,7 @@
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0",
-    "yup-locale-pt": "^0.0.9",
-    "json-server": "^0.16.3"
+    "yup-locale-pt": "^0.0.9"
   },
   "scripts": {
     "start": "react-scripts start",
