--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -14,7 +14,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.3",
     "morgan": "~1.9.1",
-    "normalize-mongoose": "^1.0.0",
+    "normalize-mongoose": "0.0.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
