--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.3",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "normalize-mongoose": "0.0.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
