--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -20,6 +20,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
-    "session-file-store": "^1.5.0"
+    "session-file-store": "^1.5.0",
+    "socket.io": "^4.8.1"
   }
 }
